test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/simple_path_access/src/lib_2.sw
library;

pub use ::items_2::*;

pub use ::items_2::Items2_Variants::*;
