test/src/e2e_vm_tests/test_programs/should_fail/generics_not_supported/src/lib_a.sw
library;

pub mod inner_lib;

use inner_lib::*;
